[package]
name = "dnsight"
version = "1.0.0"
edition = "2021"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = { version = "0.33.0", features = ["default", "__screenshot"] }
egui_extras = { version = "0.33.0", features = ["default", "all_loaders"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
image = { version = "0.25.8", features = ["jpeg", "png"] }
open = "5.0"
ping = "0.7.0"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
